k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-backend
  template:
    metadata:
      labels:
        app: test-backend
    spec:
      containers:
        - name: app
          image: dockerhub_user/test-backend:latest
          ports:
            - containerPort: 8000
