k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-backend
spec:
  ingressClassName: nginx
  rules:
    - host: app.student1.devops1.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-backend
                port:
                  number: 80
